<resources>
    <string name="app_name">ActivityFormularioConstraint</string>

    <string name="txtNome_hint">Nome</string>
    <string name="txtEndereco_hint">Endereco</string>
    <string name="txtCidade_hint">Cidade</string>
    <string name="txtEmail_hint">Email</string>
    <string name="txtTelefone_hint">Telefone</string>
    <string name="txtCep_hint">CEP</string>
    <string name="txtAniversario_hint">Aniversário</string>
    <string-array name="estados_array">
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>


</resources>